@@ -62,6 +62,11 @@ typedef struct	{
 }
 @end
 
+@interface GSDummyInvocation : NSInvocation
+{
+}
+@end
+
 @interface NSInvocation (DistantCoding)
 - (BOOL) encodeWithDistantCoder: (NSCoder*)coder passPointers: (BOOL)passp;
 @end
