@@ -254,7 +254,12 @@ static void obsFree(Observation *o);
 #define GSI_MAP_RETAIN_VAL(M, X)
 #define GSI_MAP_RELEASE_VAL(M, X)
 
-#define GSI_MAP_KTYPES GSUNION_OBJ|GSUNION_NSINT
+/* 
+ * With Apple's clang: 
+ * nil is void* and _postAndRelease() uses it as GSIMapKey,
+ * so there is a need to add GSUNION_PTR
+ */
+#define GSI_MAP_KTYPES GSUNION_OBJ|GSUNION_NSINT|GSUNION_PTR
 #define GSI_MAP_VTYPES GSUNION_PTR
 #define GSI_MAP_VEXTRA Observation*
 #define	GSI_MAP_EXTRA	void*
